tests/paczka1/fuzzy1/93884256.err
Error in line 1: A448 A448 25,4
Error in line 2: A448 S822 3,4
Error in line 14: B1jRJUAi90 S895 5,8
Error in line 16: B1jRJUAi90 A448 93,3
Error in line 20: IPQUmOQPqF1 S895 -3,0
Error in line 19: B1jRJUAi90 A85 13,6
Error in line 22: B1jRJUAi90 S822 2,2
Error in line 26: OudqomfgqCd A448 14,7
Error in line 35: A448 S822 63,6
